[gd_scene load_steps=8 format=3 uid="uid://dpbelu56weedw"]

[ext_resource type="Script" uid="uid://d4bpykmhidsgy" path="res://scripts/titleScreen.gd" id="1_qyuap"]
[ext_resource type="Texture2D" uid="uid://bv2ukofa0vr2b" path="res://spirtes/LevelSelectStarPlacholder.png" id="2_ch40n"]
[ext_resource type="Texture2D" uid="uid://c65cqdikpve5l" path="res://spirtes/Game_Background_Industrial_Haste.png" id="3_dfj8j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dfj8j"]
bg_color = Color(0.55, 0.36666667, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.31, 0.18269335, 0.0372, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4l16e"]
bg_color = Color(0.7, 0.46666667, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.31, 0.18269335, 0.0372, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qyuap"]
bg_color = Color(0.38170326, 0.38170326, 0.3817031, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8k5og"]
bg_color = Color(0.25, 0.18333334, 0.125, 0.7294118)

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_qyuap")

[node name="Camera" type="Camera2D" parent="."]

[node name="TestButton" type="Button" parent="."]
layout_mode = 0
offset_left = -560.0
offset_top = -304.0
offset_right = -416.0
offset_bottom = -224.0
theme_override_styles/normal = SubResource("StyleBoxFlat_dfj8j")
theme_override_styles/hover = SubResource("StyleBoxFlat_4l16e")
text = "Testing"

[node name="LevelSelectButton" type="Button" parent="."]
layout_mode = 0
offset_left = -256.0
offset_top = -224.0
offset_right = 256.0
offset_bottom = -128.0
theme_override_styles/normal = SubResource("StyleBoxFlat_dfj8j")
theme_override_styles/hover = SubResource("StyleBoxFlat_4l16e")
text = "Level Select
"

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 0
offset_left = -256.0
offset_top = -40.0
offset_right = 256.0
offset_bottom = 64.0
theme_override_styles/normal = SubResource("StyleBoxFlat_dfj8j")
theme_override_styles/hover = SubResource("StyleBoxFlat_4l16e")
text = "Settings"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = -256.0
offset_top = 152.0
offset_right = 256.0
offset_bottom = 256.0
theme_override_styles/normal = SubResource("StyleBoxFlat_dfj8j")
theme_override_styles/hover = SubResource("StyleBoxFlat_4l16e")
text = "Quit
"

[node name="LevelSelectBackdrop" type="Panel" parent="."]
layout_mode = 0
offset_left = -438.0
offset_top = -209.0
offset_right = 437.0
offset_bottom = 201.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qyuap")

[node name="LevelButtons" type="Control" parent="LevelSelectBackdrop"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1, 0.88)

[node name="LevelButton1" type="Button" parent="LevelSelectBackdrop/LevelButtons"]
layout_mode = 0
offset_left = 14.0
offset_top = 16.0
offset_right = 126.41757
offset_bottom = 398.0
text = "1"

[node name="Star1" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton1"]
position = Vector2(21, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="Star2" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton1"]
position = Vector2(56, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="Star3" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton1"]
position = Vector2(91, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="LevelButton2" type="Button" parent="LevelSelectBackdrop/LevelButtons"]
layout_mode = 0
offset_left = 137.0
offset_top = 16.0
offset_right = 249.41757
offset_bottom = 398.0
text = "2"

[node name="Star1" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton2"]
position = Vector2(21, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="Star2" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton2"]
position = Vector2(56, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="Star3" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton2"]
position = Vector2(91, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="LevelButton3" type="Button" parent="LevelSelectBackdrop/LevelButtons"]
layout_mode = 0
offset_left = 259.0
offset_top = 16.0
offset_right = 371.41757
offset_bottom = 398.0
text = "3"

[node name="Star1" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton3"]
position = Vector2(21, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="Star2" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton3"]
position = Vector2(56, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="Star3" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton3"]
position = Vector2(91, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="LevelButton4" type="Button" parent="LevelSelectBackdrop/LevelButtons"]
layout_mode = 0
offset_left = 382.0
offset_top = 16.0
offset_right = 494.41757
offset_bottom = 398.0
text = "4"

[node name="Star1" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton4"]
position = Vector2(21, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="Star2" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton4"]
position = Vector2(56, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="Star3" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton4"]
position = Vector2(91, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="LevelButton5" type="Button" parent="LevelSelectBackdrop/LevelButtons"]
layout_mode = 0
offset_left = 504.0
offset_top = 16.0
offset_right = 616.4176
offset_bottom = 398.0
text = "5"

[node name="Star1" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton5"]
position = Vector2(21, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="Star2" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton5"]
position = Vector2(56, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="Star3" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton5"]
position = Vector2(91, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="LevelButton6" type="Button" parent="LevelSelectBackdrop/LevelButtons"]
layout_mode = 0
offset_left = 626.0
offset_top = 16.0
offset_right = 738.4176
offset_bottom = 398.0
text = "6"

[node name="Star1" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton6"]
position = Vector2(21, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="Star2" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton6"]
position = Vector2(56, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="Star3" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton6"]
position = Vector2(91, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="LevelButton7" type="Button" parent="LevelSelectBackdrop/LevelButtons"]
layout_mode = 0
offset_left = 749.0
offset_top = 16.0
offset_right = 861.4176
offset_bottom = 398.0
text = "7"

[node name="Star1" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton7"]
position = Vector2(21, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="Star2" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton7"]
position = Vector2(56, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="Star3" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton7"]
position = Vector2(91, 354.45453)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="LevelButton8" type="Button" parent="LevelSelectBackdrop/LevelButtons"]
layout_mode = 0
offset_left = 507.0
offset_top = 410.22726
offset_right = 861.0
offset_bottom = 455.68182
text = "8"

[node name="Star1" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton8"]
position = Vector2(265.24036, 23.789845)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="Star2" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton8"]
position = Vector2(300.24036, 23.789845)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="Star3" type="Sprite2D" parent="LevelSelectBackdrop/LevelButtons/LevelButton8"]
position = Vector2(335.24036, 23.789845)
scale = Vector2(-0.61914533, 0.6964621)
texture = ExtResource("2_ch40n")

[node name="WeekLabel" type="Label" parent="LevelSelectBackdrop"]
layout_mode = 0
offset_left = 414.0
offset_top = 365.0
offset_right = 471.0
offset_bottom = 388.0
text = "Week 1"

[node name="LevelSelectBackButton" type="Button" parent="LevelSelectBackdrop"]
layout_mode = 0
offset_left = 14.0
offset_top = 361.0
offset_right = 126.0
offset_bottom = 393.0
text = "Back"

[node name="TItleBackgroundOverlay" type="Panel" parent="."]
z_index = -2
layout_mode = 0
offset_left = -576.0
offset_top = -328.0
offset_right = 576.0
offset_bottom = 328.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8k5og")

[node name="TitleBackground" type="Sprite2D" parent="TItleBackgroundOverlay"]
z_index = -4
position = Vector2(576, 328)
texture = ExtResource("3_dfj8j")

[connection signal="pressed" from="TestButton" to="." method="_on_test_button_pressed"]
[connection signal="pressed" from="LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="LevelSelectBackdrop/LevelButtons/LevelButton1" to="." method="_on_level_button_pressed" binds= [1]]
[connection signal="pressed" from="LevelSelectBackdrop/LevelButtons/LevelButton2" to="." method="_on_level_button_pressed" binds= [2]]
[connection signal="pressed" from="LevelSelectBackdrop/LevelButtons/LevelButton3" to="." method="_on_level_button_pressed" binds= [3]]
[connection signal="pressed" from="LevelSelectBackdrop/LevelButtons/LevelButton4" to="." method="_on_level_button_pressed" binds= [4]]
[connection signal="pressed" from="LevelSelectBackdrop/LevelButtons/LevelButton5" to="." method="_on_level_button_pressed" binds= [5]]
[connection signal="pressed" from="LevelSelectBackdrop/LevelButtons/LevelButton6" to="." method="_on_level_button_pressed" binds= [6]]
[connection signal="pressed" from="LevelSelectBackdrop/LevelButtons/LevelButton7" to="." method="_on_level_button_pressed" binds= [7]]
[connection signal="pressed" from="LevelSelectBackdrop/LevelButtons/LevelButton8" to="." method="_on_level_button_pressed" binds= [8]]
[connection signal="pressed" from="LevelSelectBackdrop/LevelSelectBackButton" to="." method="_on_level_select_back_button_pressed"]
